[package]
name = "misc_algo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["docs/**/*", "src/**/*"]

[workspace]
rust-toolchain = "nightly"

[dependencies]
rand = "0.8"
slotmap = "1.0.7"
num_cpus = "1.16.0"
crossbeam = "0.8.4"
